# RewardsTheater

./: .gitignore  CMakeLists.txt  CMakePresets.json  buildspec.json
.github/scripts/: .Aptfile  .build.zsh  Build-Windows.ps1  linux-deps.sh  macos-boost.zsh  macos-deps.zsh
.github/scripts/utils.pwsh/: Install-BuildDependencies.ps1  Windows-Deps.ps1
.github/scripts/utils.zsh/: check_macos  macos-deps.zsh
.github/workflows/: build-project.yaml
src/: RewardsTheaterPlugin.cpp
